--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -2,10 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/FullscreenTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="runnergame.againsttime.MainMenu">
-
+    tools:context=".MainMenu">
     <TextView
         android:id="@+id/textView2"
         android:layout_width="215dp"
